--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Sample Node JS Instant Games Bot",
   "main": "index.js",
+  "scripts": {
+    "start": "node bot.js"
+}
   "license":"Platform License",
   "dependencies": {
     "express": "^4.16.3",
